src/test/ui/issues/issue-26217.stderr
error[E0477]: the type `&'a i32` does not fulfill the required lifetime
  --> $DIR/issue-26217.rs:4:5
   |
LL |     foo::<&'a i32>();
   |     ^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0477`.
